--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "fs-extra": "^11.3.0",
+    "pdf-to-printer": "^5.6.0",
     "telegraf": "^4.16.3"
   }
 }
