--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "fs-extra": "^11.3.0",
+    "image-to-pdf": "^3.0.2",
     "pdf-to-printer": "^5.6.0",
+    "sharp": "^0.34.1",
     "telegraf": "^4.16.3"
   }
 }
